fix horizontal scrolling

--- a/main.css
+++ b/main.css
@@ -15,6 +15,10 @@
     padding-top: 90px;
 }
 
+#home {
+  overflow: hidden;
+}
+
 .home-section-pic {
     width: 80%;
     margin-left: 26rem;
